Implementar el CRUD de paquete_turistico, tanto DEV como TEST